styles.css
/*GENERAL*/
*{
  margin: 0;
  padding: 0;
}

body{
  font-family: "Snowburst One";
  display: grid;
  grid-template-rows: 1fr 8fr 1fr;
  min-height: 100vh;
}

/*HEADER*/
header{
  display: flex;
  justify-content: center;
  align-items: center;

  border-bottom: 2px black solid;

  font-family: "Snowburst One";
  font-size: 2rem;
  white-space: nowrap;

  background-color: wheat;
}
/*MAIN*/
main{
  position: relative;
  display: grid;
  grid-template-columns: 1fr 2fr 1fr;
  background-color: antiquewhite;
  padding: 1rem;
}

.player, .player_2{
  font-size: 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
  white-space: nowrap;

}

.player{
  color: blue;
  border-right: 2px grey solid;
}
.player>:first-child, .player_2>:first-child{
  cursor: pointer;
}

.player_2{
  color: red;
  border-left: 2px grey solid;
}

.board{
  padding: 1rem;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(3, 1fr);
}

.board>div{
  border: 1px solid black;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 10rem;
  aspect-ratio: 1/1;

  cursor: pointer;
}

.board>div:nth-child(3n+1){
  border-left: transparent;
}

.board>div:nth-child(3n){
  border-right: transparent;
}

.board>div:nth-child(n+7){
  border-bottom: transparent;
}

.board>div:nth-child(n-7){
  border-top: transparent;
}

.newGame{

  cursor: pointer;

  position: absolute;

  align-self: end;
  justify-self: center;
  bottom: 6px;
  min-width: 100px;
  min-height: 30px;
  border-radius: 20px;
}

/*FOOTER*/
footer{
  display: flex;
  justify-content: space-around;
  align-items: center;

  background-color: wheat;

  border-top: 2px black solid ;
}

